fix z-index loader at 100%

--- a/components/_loader.scss
+++ b/components/_loader.scss
@@ -83,5 +83,6 @@
     }
     100%{
         opacity: 0;
+        z-index: -1;
     }
 }
