--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ button:hover {
   }
   100% {
     opacity: 0;
+    z-index: -1;
   }
 }
 * {
@@ -368,7 +369,7 @@ header img {
   background-color: #ffffff;
   animation: anim-li 2000ms;
   animation-fill-mode: forwards;
-  transition: margin-bottom;
+  transition: margin-bottom ease-in-out;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 .food-element:hover {
